k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ninjas-service
  namespace: team-ccc
  labels:
    app: ninjas
spec:
  selector:
    app: ninjas
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
