k8s/ninjas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ninjas-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/naruto/(.*)"
        backend:
          service:
            name: ninjas-service
            port: 
              number: 8080
